# schur_android

./: .gitignore  ChangeLog.md  README.md  readme.html
app/: build.gradle
app/src/androidTest/java/grouptheorysoftware/schur/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/dat/: Makefile.am  Makefile.in
app/src/main/cpp/help/: ABSoluteValue  ADD  ALLskewSfn  APROPOS  ASSOCiate  ATtachPartitionToSfn  AUtoOrIsoMorphism  BRMode  BRanch  CANcelDatFile  CASIMIRGnthTrace  CASimirNthordertrace  CH_CoeffsToOneForSfns  CH_LabelForOn  CH_PhaseOfSfns  CH_SpinIndex  CH_UoneReps  CLASS  COLumns  COMPLement  COMPare  CONJADD  CONJugateSfnList  CONSPLIT  CONTENT  CONTRAGredientRep  CONTractGroups  CONV_D_TO_Rep  CONV_D_TO_Sfn  CONV_R_TO_Sfn  CONV_S_TO_Rep  COUNTCoeffsInList  COUNTTermsInList  COVariant  DEAD  DIMension  DPMode  DYNKINIndex  D_TO_Plabel  END  (+205 more)
app/src/main/cpp/schurnativelib/: CMakeLists.txt  FillCommandTab.c  FillCommandTab.h  FrontPage.c  FrontPage.h  Getl.c  Getl.h  Makefile.am  Makefile.in  ReadWrite.c  ReadWrite.h  Scanck.c  Scanck.h  ansiCodes.txt  apropos.c  apropos.h  bignums.c  bignums.h  branch.c  branch.h  define.h  dim.h  dimensions.c  dimensions.h  g.c  g.h  gr.c  gr.h  hivesLRcoef.c  hivesLRcoef.h  init.c  init.h  label.c  label.h  loadcomList.c  loadcomList.h  m.c  m.h  mymalloc.c  mymalloc.h  (+47 more)
app/src/main/java/grouptheorysoftware/schur/: MainActivity.java  MainActivityFragment.java
app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/grouptheorysoftware/schur/: ExampleUnitTest.java
docs/: schur_manf.tex.in
