helpdir  = $(pkgdatadir)/help

SOURCES = \
ABSoluteValue\
ADD\
ALLskewSfn\
APROPOS\
ASSOCiate\
ATtachPartitionToSfn\
AUtoOrIsoMorphism\
BRanch\
BRMode\
CANcelDatFile\
CASIMIRGnthTrace\
CASimirNthordertrace\
CH_CoeffsToOneForSfns\
CH_LabelForOn\
CH_PhaseOfSfns\
CH_SpinIndex\
CH_UoneReps\
CLASS\
COLumns\
COMPare\
COMPLement\
CONJADD\
CONJugateSfnList\
CONSPLIT\
CONTENT\
CONTractGroups\
CONTRAGredientRep\
CONV_D_TO_Rep\
CONV_D_TO_Sfn\
CONV_R_TO_Sfn\
CONV_S_TO_Rep\
COUNTCoeffsInList\
COUNTTermsInList\
COVariant\
DEAD\
DIMension\
DPMode\
DYNKINIndex\
D_TO_Plabel\
END\
ENTerVar\
EQualSfnList\
E_TO_FSymmFn\
E_TO_HSymmFn\
E_TO_MSymmFn\
E_TO_SSymmFn\
EXITmode\
EXPandSfnList\
FFPROD\
FIRSTPart\
FN\
FPROD\
FRACAHnotation\
FROBenius\
F_TO_ESymmFn\
F_TO_HSymmFn\
F_TO_MSymmFn\
F_TO_SSymmFn\
FUSion\
GENERIC\
GENprod\
GRoup\
GWT\
HALLpolynomialProduct\
HCLASS\
HEAPstatus\
HECKE\
HIVESLRCOEFficient\
HSTD\
HSTDList\
H_TO_ESymmFn\
H_TO_FSymmFn\
H_TO_MSymmFn\
H_TO_SSymmFn\
INDEXsequence\
INSertPartitionIntoSfn\
INTegerDivideCoeffs\
INVerseseries\
I_PLethysmRd\
I_QfnProduct\
I_sfnProduct\
I_SFNQfnProduct\
KINSert\
KMatrix\
Kostka\
LABel\
LASTresult\
LATticetest\
LENgthOfPartitionsSelect\
LICENSE\
LINES\
LOadFile\
LOGfile\
LSEQuence\
MACseries\
MACMixedSeries\
MAKEwtOfSfnToN\
MAXCoeffInList\
MIXedTensorReps\
M_TImesSfnProduct\
M_TO_ESymmFn\
M_TO_FSymmFn\
M_TO_HSymmFn\
M_TO_SSymmFn\
MUlt_CoeffsByAnInt\
MULT_List\
MULT_Ntimes\
MULT_PartsByAnInt\
MULT_SelectInList\
MULT_SPlitIntoTwoLists\
MYlistOfSfns\
NLambda\
NSKew\
NSTDise\
ONSCalar\
O_PfnProduct\
O_QfnProduct\
O_Restrict\
O_sfnProduct\
PARITYsequence\
PAUSE\
P_TO_Dlabel\
PLethysm\
PLG\
ProductKronecker\
PROPertyOfRepList\
P_TO_SSymmFn\
QEXPandSpecialSeries\
QQEXPandSpecialSeries\
QQSEries\
QSAME\
QSERies\
QUIT\
Q_TO_SDual\
RACAHnotation\
RAISEInverseOp\
RAISEop\
RD_I_QfnProduct\
RD_I_sfnProduct\
RD_RAISEInverseOp\
RD_RaiseOp\
READFnFromDisk\
REMark\
REPmode\
RETurn\
RIB_TO_S\
RIEMANNList\
RIEMANNPlethList\
RIEMANNScalarsOrderN\
RM_EVENPARTS\
RM_EVENRkSfnsOnly\
RM_EVENWtInList\
RM_FirstPartOfSfn\
RM_Group\
RM_NMParts\
RM_ODDPARTS\
RM_ODDRkSfnsOnly\
RM_ODDWtInList\
RM_PartitionFromSfn\
RM_PARTSequalN\
RM_RepeatedPartsSfns\
RM_SOnEvenLabels\
RM_UoneWtOverMax\
RP_FirstPartBySpin\
RP_RepOrSfnByWt\
RP_SfnCoeffByInt\
RSAMEwtSfnList\
RULE\
RVar\
SAMEwtSfns\
SAVEsetVar\
SB_Bell\
SB_CONjecture\
SB_CUT\
SB_DEBUG\
SB_Digits\
SB_DIMension\
SB_More\
SB_POWerNotation\
SB_PROGress\
SB_Qfn\
SB_RD_notation\
SB_REVerseOrder\
SB_TexOutPut\
SCALARInner\
SCHAR\
SERIESTErmsThatSkew\
SERiesToIntWt\
SETFn\
SETLIMit\
SETRVar\
SETSVar\
SETVarInDPmode\
SET_PWT\
SFNmode\
SIGNSEQuence\
SK_Pfn\
SK_Qfn\
SK_sfn\
SMON\
SNchar\
SPIN\
SPLitIntoSpinAndTensor\
SPONModify\
SPRCH\
SPREXtend\
SPSTAR\
SQuares\
STARequivalent\
STATusOfSchur\
STD\
STD_OneDprep\
STD_Qfn\
S_TO_ESymmFn\
S_TO_FSymmFn\
S_TO_HSymmFn\
S_TO_MSymmFn\
STOP\
S_TO_PsymmFn\
S_TO_QsymmFn\
SUBtract\
SUM\
SUMSQuares\
SUPpressOutputToScreen\
SVar\
SWAPgroups\
TABleOfBranchingRules\
UONEAddInteger\
UONEDivInteger\
UONETrace\
VarForDpreps\
VMult\
WHATGroup\
WITH\
WRFNTODisk\
WRfnToScreen\
WSEQuence\
WTofRepOrSfnSelect\
YHooklengths\
YOungDiagrams\
YShapeSelect\
Zero

dist_help_DATA = ${SOURCES} HELP
EXTRA_DIST=help.ini

all: HELP
HELP: ${SOURCES}
	cat help.ini > HELP
	./helpFilesList.sh >> HELP 2> /dev/null
